differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr35441.c-4.8.2-0.out.txt
pr35441.c: In function ‘foo1’:
pr35441.c:8:10: error: called object is not a function or function pointer
   (p - q)();    
          ^
pr35441.c: In function ‘foo2’:
pr35441.c:13:8: error: called object is not a function or function pointer
   (x/y)();    
        ^
pr35441.c: In function ‘foo3’:
pr35441.c:18:27: error: called object is not a function or function pointer
   (i << j | i >> (32 - j))();  
                           ^
pr35441.c:19:27: error: called object is not a function or function pointer
   (i >> j | i << (32 - j))();  
                           ^
pr35441.c: In function ‘foo4’:
pr35441.c:24:18: error: called object is not a function or function pointer
   (p < q ? p : q)();   
                  ^
pr35441.c:25:18: error: called object is not a function or function pointer
   (p > q ? p : q)();   
                  ^
